Fix alignment in sessions, remove two extraneous css classes

--- a/styles/main.css
+++ b/styles/main.css
@@ -165,10 +165,6 @@ p.trackSwitch {
   text-align: center;
 }
 
-p.eventDescr {
-  text-align: center;
-}
-
 p.mutualEventTalkTitle {
   font-size: 1.1em;
   font-weight: bold;
@@ -183,10 +179,6 @@ p.mutualEventTalkTitle {
 .track2Event {
   background-color: rgba(164, 244, 199, 0.3);
   margin-bottom: 10px;
-}
-
-p.dualTrackDescr {
-  text-align: left;
 }
 
 span.authorName:after {
